Stage "Results and future work" is rated 1,5.  Sections Findings, Conclusion,  Future work are added.

--- a/Main.tex
+++ b/Main.tex
@@ -181,7 +181,7 @@ sparse feature selection \sep subset selection \sep dictionary selection \sep su
 разреженности входного сигнала, что отличается от нашей задачи минимизации погрешности предсказания произвольного сигнала при заданном условии
 уровня разреженности.
 
-Для жадных алгоритмов, решающих задачу разреженного восстановление подбора признака, Lozano \cite{swirszcz2009grouped} (OMP) и Zhang \cite{zhang2009consistency} (FR) показали в своих работах, что прямая регрессия и обратная регрессия могут применяться для восстановления разрежнного сигнала. 
+Для жадных алгоритмов, решающих задачу разреженного восстановление подбора признака, Lozano \cite{swirszcz2009grouped} (OMP) и Zhang \cite{zhang2009consistency} (FR) показали в своих работах, что прямая регрессия и обратная регрессия могут применяться для восстановления разреженного сигнала. 
 
 Das и Kempe \cite{das2011submodular}, а также Gilbert \cite{gilbert2003approximation} исследовали жадные алгоритмы с такой же постановкой задачи, как в нашем случае. Ими были получены результаты оценки на точность аппроксимации: $1+\Theta\left(\mu^{2} k\right)$ для среднеквадратической ошибки (MSE), $1-\Theta(\mu k)$ для коэффициента детерминации $R^2$.
 
@@ -251,7 +251,7 @@ Das и Kempe \cite{das2011submodular}, а также Gilbert \cite{gilbert2003ap
 Опишем следующую задачу выбора $k$ случайных величин из множества \textit{(Subset Selection problem)}. Требуется аппроксимировать некоторую интересующую нас величину $Z$, используя линейную регрессию на небольшом подмножестве исследуемых случайных величин $V=\{X_1,\dots, X_n\}$.\\
 
 Для величин $X_i \in V$ известны дисперсии $\mathbb{D}X_i = \mathrm{Cov}(X_i, X_i)$ и ковариации $\mathrm{Cov}(X_i, X_j)$. 
-При соответствующей нормализации можно предположить, что все случайные величины имеют матожидание 0 и дисперсию 1. 
+При соответствующей нормализации можно предположить, что все случайные величины имеют математическое ожидание 0 и дисперсию 1. 
 Таким образом, может быть составлена матрица ковариаций C:
 \[c_{ij} = \mathrm{Cov}(X_i, X_j).\] 
 Также обозначим вектор ковариаций $Z$ и $X_i$ как 
@@ -294,9 +294,10 @@ Das и Kempe \cite{das2011submodular}, а также Gilbert \cite{gilbert2003ap
 \end{figure}
 
 \begin{definition}
+\label{L1}
 $L_1$~-- регуляризацией называется добавление дополнительного слагаемого $\sum\limits_{i = 1}^n |x_i|$, и исходная задача принимает вид: 
 \[
-\min\limits_{x}(f(x) + \sum\limits_{i = 1}^n|x_i|)
+\min\limits_{x}(f(x) + \lambda \sum\limits_{i = 1}^n|x_i|)
 \]
 \end{definition}
 
@@ -339,7 +340,7 @@ $L_1$~-- регуляризацией называется добавление 
 
 Более простой и интуитивно понятный подход, широко используемый на практике для решения задач выбора оптимального подмножества (например, он интегрирован во все пакеты коммерческой статистики), заключается в использовании жадных алгоритмов, которые итеративно добавляют (или удаляют) величины $X_i$ в текущее оптимальное подмножество на основе меры соответствия их комбинации с $Z$.\\
 
-В этой работе будут рассмотрены следующие жадные алгоритмы: Прямая Регрессия (Forward Regression) \cite{miller2002subset}, Метод Ортогонального Согласованного Преследования (Orthogonal Matching Pursuit)\cite{tropp2004greed}, Забывчивый Жадный Алгоритм (Oblivious greedy algorithm).
+В этой работе будут рассмотрены следующие жадные алгоритмы: Прямая Регрессия (Forward Regression) \cite{miller2002subset}, Метод Ортогонального Согласованного Преследования (Orthogonal Matching Pursuit)\cite{tropp2004greed}, Забывчивый Жадный Алгоритм (Oblivious greedy algorithm), также будет рассмотрена $L_1$~-- регуляризация.
 
 \subsection{Forward Regression (Прямая регрессия)}
 Данный алгоритм для задачи $Subset Selection$ выбирает множество $S$ размера $k$, искомое в задаче. 
@@ -380,6 +381,9 @@ $L_1$~-- регуляризацией называется добавление 
 Выбирается $k$ случайных величин $X_i$ с наибольшими значениями $\mathbf{b_i}$.\\
 
 Данный алгоритм является самым тривиальным из исследуемых, так как в его работе вообще не используется матрица ковариаций $C$.
+
+\subsection{$L_1$~-- регуляризация}
+В описанном ранее методе (\ref{L1}) подбирается такой минимальный коэффициент $\lambda$, чтобы не более чем $k$ координат вектора $\alpha$ оказались по модулю больше некоторого малого заданного $\varepsilon$, соответствующие им признаки образуют искомое множество. Это делается для контроля количества значимых признаков, т.е. размера искомого множества.
 
 \section{Анализ работы алгоритмов}
 В этой секции мы оценим сходимость описанных выше алгоритмов. Введем величину $OPT=\max_{S:|S|=k} R_{Z, S}^{2}$ для обозначения оптимального значения $R^2$, достигаемого для любого подмножества размера $k$. 
@@ -461,15 +465,16 @@ R_{Z, S^{O M P}}^{2} & \geq\left(1-e^{-\left(\gamma_{S} O u_{, k} \cdot \lambda_
     \end{minipage}
 \end{figure}
 
-Исследуемые методы были проверены на двух наборах данных: Boston Housing и синтетических данных ($X_i$ сгенерированы из многомерного нормального распределения с матрицей ковариации $C$, близкой к вырожденной, и $Z = \sum\limits_{i = 1}^n \alpha_i X_i + \varepsilon$, где $\varepsilon$ - нормально распределенная случайная величина). Из графиков видно, что наилучший результат показывает метод Прямой Регрессии (Forward Regression), достаточной близкий результат у метода Ортогонального Согласованного Преследования (Orthogonal Matching Pursuit), а Забывчивый жадный алгоритм (Oblivious greedy Algorithm) показывает существенно меньший результат. Например, для $k = 5$ и $k = 8$ на данных Boston Housing были достигнуты следующие результаты: 
+Исследуемые методы были проверены на двух наборах данных: Boston Housing и синтетических данных ($X_i$ сгенерированы из многомерного нормального распределения с матрицей ковариации $C$, близкой к вырожденной, и $Z = \sum\limits_{i = 1}^n \alpha_i X_i + \varepsilon$, где $\varepsilon$ - нормально распределенная случайная величина). Из графиков видно, что наилучший результат показывает метод Прямой Регрессии (Forward Regression), достаточной близкий результат у метода Ортогонального Согласованного Преследования (Orthogonal Matching Pursuit), а Забывчивый жадный алгоритм (Oblivious greedy Algorithm) показывает существенно меньший результат. На реальных данных хуже всего себя показывает $L_1$~-- регуляризация. Важно отметить, что Например, для $k = 5$ и $k = 8$ на данных Boston Housing были достигнуты следующие результаты: 
 \begin{center}
-    \begin{tabular}{ |c|c|c|c| } 
+    \begin{tabular}{ |c|c|c|c|c| } 
         \hline
-          & Forward Regression & OMP & Oblivious greedy Algorithm \\ 
+          & Forward  & OMP & Oblivious& $L_1$ \\ 
+          &  Regression & & Algorithm & \\ 
          \hline
-         $k = 5$ & 0.71 & 0.70 & 0.68 \\ 
+         $k = 5$ & 0.71 & 0.70 & 0.68 & 0.59\\ 
          \hline
-         $k = 8$ & 0.73 & 0.73 & 0.69 \\ 
+         $k = 8$ & 0.73 & 0.73 & 0.69& 0.61\\ 
          \hline
     \end{tabular}
 \end{center}
@@ -477,17 +482,17 @@ R_{Z, S^{O M P}}^{2} & \geq\left(1-e^{-\left(\gamma_{S} O u_{, k} \cdot \lambda_
 
 \section{Выводы}
 \begin{itemize}
-    \item наилучший результат показывает метод Прямой Регрессии
-    \item забывчивый жадный Алгоритм(Oblivious greedy Algorithm) показывает существенно меньший результат
+    \item Наилучший результат на двух наборах данных показывает метод Прямой Регрессии (Forward Regression).
+    \item Забывчивый жадный Алгоритм (Oblivious greedy Algorithm) и $L_1$-регуляризация показывают результаты, существенно уступающие Прямой Регрессии (Forward Regression) и  Ортогональному Согласованному Преследованию (Orthogonal Matching Pursuit).
 \end{itemize}
 
-\section{Результаты}
-
-В работе были рассмотрены три алгоритма с жадной эвристикой
-
 \section{Заключение}
-\label{S:5}
-Опробовали жадные алгоритмы. Сделали оценки на них с помощью субмодулярных функций. 
+
+В данной статье были рассмотрены такие задачи, как Выбор оптимального подмножества и Выбор оптимального словаря. Эти задачи были рассмотрены в контексте отбора признаков. Для их решения были подобраны жадные алгоритмы: Прямая Регрессия (Forward Regression), Ортогональное Согласованное Преследование (Orthogonal Matching Pursuit), Забывчивый жадный алгоритм (Oblivious greedy Algorithm). Так же была рассмотрена $L_1$-регуляризация (Lasso Regression). Наилучший коэффициент детерминации лучший результат показали Прямая Регрессия и Ортогональное Согласованное Преследование на реальных и синтетических данных. Соответственно худший результат показали Забывчивый жадный алгоритм и $L_1$-регуляризация. Для данных жадных алгоритмов были подтверждены теоретические оценки на точность аппроксимации оптимального $OPT$. 
+\section{Направление исследования в будущем}
+В дальнейших исследованиях планируется исследовать возможность решения схожей задачи с помощью эвристик, например Прямо-обратная Регрессия (Forward-backward Regression), Поиск в Ширину (Breadth-first Search), Поиск в Глубину (Depth-first Search), и Генетические алгоритмы (Genetic Algorithm)~\cite{vorontcov2007lectures}.
+
+
 
 % \section{Список литературы}
 
