--- a/sample.bib
+++ b/sample.bib
@@ -221,3 +221,9 @@
   title = {{Data set from Kaggle competition} Boston housing},
   howpublished = {\url{https://www.kaggle.com/c/boston-housing}}
 }
+@article{vorontcov2007lectures,
+  title={Лекции по методам оценивания и выбора моделей},
+  author={Воронцов, КВ},
+  journal={Режим доступа: http://www. Machi neLearning. ru},
+  year={2007}
+}
