--- a/Main.tex
+++ b/Main.tex
@@ -44,12 +44,13 @@
 %Hyphenation rules
 %--------------------------------------
 \usepackage{hyphenat}
-
+\usepackage{amsmath}
 %--------------------------------------
 %Среда для алгоритмов
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage{comment}
+
 %% The graphicx package provides the includegraphics command.
 \usepackage{graphicx}
 %% The amssymb package provides various useful mathematical symbols
@@ -94,7 +95,10 @@
 
 %% Title, authors and addresses
 
-\title{Решение задачи выбора оптимального подмножества с помощью методов оптимизации субмодулярных функций}
+\title{Сравнение жадных эвристик для решения задачи выбора оптимального подмножества}
+
+% Решение задачи выбора оптимального подмножества с помощью методов оптимизации субмодулярных функций
+% Сравнение жадных эвристик для решения задачи выбора оптимального подмножества
 
 %% use the tnoteref command within \title for footnotes;
 %% use the tnotetext command for the associated footnote;
@@ -142,41 +146,34 @@ sparse feature selection \sep subset selection \sep dictionary selection \sep su
 % \linenumbers
 
 %% main text
-% \section{Введение}
-% \label{S:1}
-% В работе используется понятие субмодулярной функции и связанные определения. Проиллюстрируем актуальность исследования субмодулярных функций на практических примерах. Один из примеров использования~-- резюмирование документов~\cite{lin2011class}, также есть примеры использования для нахождения максимального потока~\cite{gridchyn2013potts} и для оптимизации производства~\cite{mccormick2005submodular}. 
-% Нами более подробно исследуется задача \textit{Выбора оптимального подмножества}: необходимо выбрать подмножество определенной мощности из конечного множества, чтобы по этому подмножеству можно было наиболее точно оценить некоторую величину.
-% Данная задача широко применяется во многих областях, таких как отбор признаков, выбор оптимального словаря (\textit{Dictionary Selection}) в машинном обучении~\cite{krause2010submodular} и получении и восстановлении сжатого сигнала(\textit{Compressed Sensing})~\cite{coutino2018submodular}. В машинном обучении множеством может быть имеющийся набор признаков, а искомым подмножеством небольшая часть этих признаков, по которой можно с небольшими потерями точности предсказывать целевое значение, что позволяет ускорить вычисление.
-% На практике для предсказания величины часто используется линейная регрессия, один из способов минимизации MSE это максимизация множественного коэффициента корреляции(\ref{S:2}). 
-% Мы рассматриваем жадные алгоритмы(\ref{S:3}) для нахождения искомого подмножества и сравниваем результаты их работы на разных наборах данных.
+
 
 \section{Введение}
 % новое введение
 \label{S:1}
 
-В этой работе мы рассматриваем $NP-$трудную~\cite{chen2008np} задачу выбора оптимального подмножества случайных величин из множества признаков для наилучшей линейной аппроксимации целевой случайной величины. В качестве целевой максимизируемой функции рассматривается \textit{коэффициент детерминации} $R^2$. Формальные определения и постановка задачи приведены в секциях \hyperref[sec:theory]{\textit{теоретического введения}} и \hyperref[S:2]{\textit{постановки задачи}}.
+В этой работе рассматривается $NP-$трудная~\cite{chen2008np} задача выбора оптимального подмножества случайных величин из множества признаков для наилучшей линейной аппроксимации целевой случайной величины. В качестве целевой максимизируемой функции рассматривается \textit{коэффициент детерминации} $R^2$. Формальные определения и постановка задачи приведены в секциях \hyperref[sec:theory]{\textit{теоретического введения}} и \hyperref[S:2]{\textit{постановки задачи}}.
 
 Задачу выбора оптимального словаря можно описать следующим образом. 
 Даны нормированные ковариации между случайными величинами $X_1, \dots, X_n$, из которых выбирается оптимальное $k$-подмножество, и величиной $Z$, которую требуется аппроксимировать. 
-Задача состоит в выборе подмножества из $k \ll n$ величин $X_i$, такое что для линейной комбинации выбранных $X_{i_1}, \dots, X_{i_k}$ достигается максимальное значение $R^2$.
+Задача состоит в выборе подмножества из $k \ll n$ величин $X_i$, такого что для линейной комбинации выбранных $X_{i_1}, \dots, X_{i_k}$ достигается максимальное значение $R^2$.
 
-Данная формулировка эквивалентна~\cite{das2008algorithms} \textit{задаче разреженной аппроксимации по словарным векторам}, которая формулируется следующим образом. Дано множество из $n$ векторов $\textbf{x}_i \in \mathbf{R}^m$, также целевой вектор $\textbf{z} \in \mathbf{R}^m$. Требуется выбраться не более $k$ векторов из словаря, чья линейная комбинация наилучшим образом аппроксимирует $\textbf{z}$.
+Данная формулировка эквивалентна~\cite{das2008algorithms} \textit{задаче разреженной аппроксимации по словарным векторам}, которая формулируется следующим образом. Дано множество из $n$ векторов $\textbf{x}_i \in \mathbf{R}^m$, также целевой вектор $\textbf{z} \in \mathbf{R}^m$. Требуется выбрать не более $k$ векторов из словаря так, чтобы их линейная комбинация наилучшим образом аппроксимировала $\textbf{z}$.
 
-Комбинаторное решение такой задачи требует больших вычислительных мощностей~\cite{chen2008np}. Однако, как показывает опыт~\cite{bian2017guarantees, lovasz1983submodular}, существуют эффективные неточные методы решения таких задач. Именно такие методы являются предметом изучения. Будут даны теоретические оценки их сходимости и оценка точности по сравнению с результатом, полученным полным перебором.
+Комбинаторное решение такой задачи требует больших вычислительных мощностей~\cite{chen2008np}. Однако, как показывает опыт~\cite{bian2017guarantees, lovasz1983submodular}, существуют эффективные неточные методы решения таких задач. Именно такие методы являются предметом изучения в данной работе. Будут даны теоретические оценки их сходимости и оценка точности по сравнению с результатом, полученным полным перебором.
 
 \subsection{Почему это важно?}
 Данная задача широко применяется задач машинного обучения, таких как отбор признаков, выбор оптимального словаря (Dictionary Selection) \cite{krause2010submodular} и обработка сигналов (Compressed Sensing)~\cite{coutino2018submodular}. В контексте машинного обучения под оптимальным подмножеством может подразумеваться некоторая часть признаков, по которой можно достаточно точно предсказывать целевое значение. Это позволяет не использовать признаки, не входящие в оптимальное подмножество, при предсказании целевой переменной, что может значительно уменьшить количество вычислений.
-%%На практике для предсказания величины часто используется линейная регрессия~\cite{zou2003correlation}. Один из способов -- это минимизация среднеквадратической ошибки MSE () -- это максимизация множественного коэффициента корреляции (см. \ref{S:2}). 
 
 \subsection{На чем мы фокусируемся}
 Более конкретно мы работаем с задачей выбора оптимального подмножества случайных величин, заданной мощности, из множества признаков при имеющейся матрице ковариаций. Проведены эксперименты на сгенерированных синтетических данных и датасете \textit{Boston Housing}~\cite{boston}.
 
 \subsection{Ожидаемые результаты}
-В следующих разделах будет приведено сравнение между собой следующих \textit{жадных} алгоритмов: Прямая регрессия, Метод ортогонального согласованного преследования, Забывчивый жадный алгоритм. Ожидается, что результаты согласуются с теоретическими оценками на точность аппроксимации и покажут выигрыш по времени \textit{жадных} эвристик по сравнению с NP-перебором.
+В следующих разделах будет приведено сравнение между собой следующих \textit{жадных} алгоритмов: прямая регрессия, метод ортогонального согласованного преследования, забывчивый жадный алгоритм. Ожидается, что результаты согласуются с теоретическими оценками на точность аппроксимации (по коэффициенту детерминации) и покажут выигрыш по времени \textit{жадных} эвристик по сравнению с NP-перебором.
 
 \paragraph{Обзор литературы}
 
-Как было сказано ранее, в общем случае комбинаторная задача выбора оптимального $k$-подмножества является NP-сложной~\cite{das2011submodular}. Таким образом, не существует алгоритма, способного решить такую задачу без приближений за полиномиальное время для всех входных данных. По этой причине для решения чаще всего используются два подхода: жадные алгоритмы \cite{miller2002subset, tropp2004greed, gilbert2003approximation} и выпуклые релаксационные схемы \cite{obozinski2012convex, tibshirani1996regression, candes2006stable}. Применительно к $L_1$-релаксационным схемам Tropp \cite{tropp2006just} показал условия, основанные на когерентности, то есть максимальной корреляции между любой парой величин, при которых гарантируется оптимальное восстановление разреженного сигнала. Другие результаты \cite{zhou2009thresholding} также подтверждают условия, при которых $L_1$-регуляризация достаточно точно восстанавливает разреженный входной сигнал. Однако вышеприведенные результаты не являются непосредственно применимыми к
+Как было сказано ранее, в общем случае комбинаторная задача выбора оптимального $k$-подмножества является NP-сложной~\cite{das2011submodular}. Таким образом, не существует алгоритма, способного решить такую задачу без приближений за полиномиальное время для всех входных данных. По этой причине для решения чаще всего используются два подхода: жадные алгоритмы \cite{miller2002subset, tropp2004greed, gilbert2003approximation} и выпуклые релаксационные схемы \cite{obozinski2012convex, tibshirani1996regression, candes2006stable}. Применительно к $L_1$-релаксационным схемам Tropp \cite{tropp2006just} показал условия, основанные на когерентности, то есть максимальной корреляции между любой парой величин, при которых гарантируется оптимальное восстановление разреженного сигнала, то есть достигается максимум $R^2$. Другие результаты \cite{zhou2009thresholding} также подтверждают условия, при которых $L_1$-регуляризация достаточно точно восстанавливает разреженный входной сигнал. Однако вышеприведенные результаты не являются непосредственно применимыми к
 нашей формулировке выбора оптимального   подмножества. Цель разреженного восстановления состоит в том, чтобы восстановить истинные коэффициенты
 разреженности входного сигнала, что отличается от нашей задачи минимизации погрешности предсказания произвольного сигнала при заданном условии
 уровня разреженности.
@@ -295,10 +292,19 @@ Das и Kempe \cite{das2011submodular}, а также Gilbert \cite{gilbert2003ap
 
 \begin{definition}
 \label{L1}
-$L_1$~-- регуляризацией называется добавление дополнительного слагаемого $\sum\limits_{i = 1}^n |x_i|$, и исходная задача принимает вид: 
-\[
-\min\limits_{x}(f(x) + \lambda \sum\limits_{i = 1}^n|x_i|)
-\]
+$L_1$~-- регуляризацией задачи линейной регрессии \cite{montgomery2012introduction} называется добавление дополнительного слагаемого $\sum\limits_{j = 1}^n |w_j|$ к целевой функции, и исходная задача принимает вид: 
+
+Среднеквадратичная ошибка (MSE)~\cite{montgomery2012introduction} может быть переписана в матричном представлении 
+$$Q(\mathbf{w} ; X)=\frac{1}{m}\|X \mathbf{w}-\boldsymbol{y}\|^{2}$$
+
+С учетом $L_1$-регуляризации 
+% \min\limits_{x}(f(x) + \lambda \sum\limits_{i = 1}^n|x_i|) \\
+
+$$Q(\mathbf{w} ; X)+\lambda\|\mathbf{w}\| \rightarrow \min _{\mathbf{w}} $$
+
+Аналитическим решением будет являться
+$$\mathbf{w}_{*}=\arg \min _{\mathbf{w}}\left(\frac{1}{m} \sum_{i=1}^{m}\left(\left\langle\mathbf{w}, \mathbf{x}_{i}\right\rangle-y_{i}\right)^{2}+\lambda \sum_{j=1}^{n}\left|w_{j}\right|\right)$$
+
 \end{definition}
 
 \section{Причем тут субмодулярность?}
@@ -340,12 +346,12 @@ $L_1$~-- регуляризацией называется добавление 
 
 Более простой и интуитивно понятный подход, широко используемый на практике для решения задач выбора оптимального подмножества (например, он интегрирован во все пакеты коммерческой статистики), заключается в использовании жадных алгоритмов, которые итеративно добавляют (или удаляют) величины $X_i$ в текущее оптимальное подмножество на основе меры соответствия их комбинации с $Z$.\\
 
-В этой работе будут рассмотрены следующие жадные алгоритмы: Прямая Регрессия (Forward Regression) \cite{miller2002subset}, Метод Ортогонального Согласованного Преследования (Orthogonal Matching Pursuit)\cite{tropp2004greed}, Забывчивый Жадный Алгоритм (Oblivious greedy algorithm), также будет рассмотрена $L_1$~-- регуляризация.
+В этой работе будут рассмотрены следующие жадные алгоритмы: Прямая регрессия (Forward Regression) \cite{miller2002subset}, метод Ортогонального согласованного Преследования (Orthogonal Matching Pursuit)\cite{tropp2004greed}, Забывчивый жадный алгоритм (Oblivious greedy algorithm), также будет рассмотрена $L_1$~-- регуляризация.
 
 \subsection{Forward Regression (Прямая регрессия)}
 Данный алгоритм для задачи $Subset Selection$ выбирает множество $S$ размера $k$, искомое в задаче. 
 
-\begin{algorithm}%[t!]
+\begin{algorithm}[H]
 \caption{Forward Regression}\label{algo::fg1}
 \begin{algorithmic}[1]
 \Require $k \in \mathbb{N}$
@@ -353,8 +359,8 @@ $L_1$~-- регуляризацией называется добавление 
 \State $S := \emptyset$;
 \While{$i < k$}
 \State Выбирается случайная величина $X_m \in V \backslash S$ максимизирующая $R_{Z, S + \{X_m\}}^{2}$;
-\State $S \gets S + \{X_m\}$;
-\State $i \gets i + i$;
+\State $S \gets S \cup X_m$;
+\State $i \gets i + 1$;
 \EndWhile
 \end{algorithmic}
 \end{algorithm}
@@ -362,7 +368,7 @@ $L_1$~-- регуляризацией называется добавление 
 \subsection{Orthogonal Matching Pursuit (Метод ортогонального согласованного преследования)}
 Данный алгоритм для задачи $Subset Selection$ выбирает множество $S$ размера $k$, искомое в задаче. 
 
-\begin{algorithm}%[t!]
+\begin{algorithm}[H]
 \caption{Orthogonal Matching Pursuit}\label{algo::fg2}
 \begin{algorithmic}[1]
 \Require $k \in \mathbb{N}$
@@ -370,8 +376,8 @@ $L_1$~-- регуляризацией называется добавление 
 \State $S := \emptyset$;
 \While{$i < k$}
 \State Выбирается случайная величина $X_m \in V \backslash S$ максимизирующая $|Cov(Res(Z, S_i), X_m)|$;
-\State $S \gets S + \{X_m\}$;
-\State $i \gets i + i$;
+\State $S \gets S \cup X_m$;
+\State $i \gets i + 1$;
 \EndWhile
 \end{algorithmic}
 \end{algorithm}
@@ -382,14 +388,43 @@ $L_1$~-- регуляризацией называется добавление 
 
 Данный алгоритм является самым тривиальным из исследуемых, так как в его работе вообще не используется матрица ковариаций $C$.
 
-\subsection{$L_1$~-- регуляризация}
-В описанном ранее методе (\ref{L1}) подбирается такой минимальный коэффициент $\lambda$, чтобы не более чем $k$ координат вектора $\alpha$ оказались по модулю больше некоторого малого заданного $\varepsilon$, соответствующие им признаки образуют искомое множество. Это делается для контроля количества значимых признаков, т.е. размера искомого множества.
+\begin{algorithm}[H]
+\caption{Oblivious greedy algorithm}\label{algo::obg}
+\begin{algorithmic}[1]
+\Require $k \in \mathbb{N}$
+\State $i := 0$;
+\State $S := \emptyset$;
+\While{}{$i < k$}
+\State Выбирается случайная величина $X_m \in V \backslash S$ максимизирующая $|b_i|$;
+\State $S \gets S \cup X_m$;
+\State $i \gets i + 1$;
+\EndWhile
+\end{algorithmic}
+\end{algorithm}
+
+\subsection{$L_1$~-- регрессия}
+В описанном ранее  \hyperref[L1]{\textit{определении 4}} подбирается такой минимальный коэффициент $\lambda$, чтобы не более чем $k$ координат вектора $\alpha$ оказались по модулю больше некоторого малого заданного $\varepsilon$, соответствующие им признаки образуют искомое множество. Это делается для контроля количества значимых признаков, то есть размера искомого множества.
+
+\begin{algorithm}[H]
+\caption{$L_1$~-- регрессия}\label{algo::fg4}
+\begin{algorithmic}[1]
+\Require $k \in \mathbb{N}$, $\alpha > 1$, $\varepsilon > 0$
+\State $\lambda := \lambda_0$;
+\State $S := V$;
+\While{$|S| > k$}
+\State Выбирается подмножество случайных величин $\{X_{n_m}\}_{m = 1}^{k'} \subset V$ таких, что $|w_{n_m}| > \varepsilon$, где $w$ - вектор весов в решении задачи минимизации MSE с $L_1$-регуляризацией с параметром $\lambda$;
+\State $S \gets \{X_{n_m}\}_{m = 1}^{k'}$;
+\State $\lambda \gets \lambda \cdot \alpha$
+\EndWhile
+\end{algorithmic}
+\end{algorithm}
 
 \section{Анализ работы алгоритмов}
 В этой секции мы оценим сходимость описанных выше алгоритмов. Введем величину $OPT=\max_{S:|S|=k} R_{Z, S}^{2}$ для обозначения оптимального значения $R^2$, достигаемого для любого подмножества размера $k$. 
 \subsection{Forward Regression (Метод прямой регрессии)}
 Для оптимального подмножества, выбранного в результате работы алгоритма прямой регрессии, введем обозначение $S^{FR}$. Основные результаты оценки работы метода приведены в следующей теореме.
 \begin{theorem}[Оценки на множество $S^{FR}$\cite{das2011submodular}]
+\label{t1}
 Для подмножества $S^{FR}$, выбранного методом прямой регрессии, справедливы следующие оценки:
 \begin{equation}\begin{aligned}
 R_{Z, S^{F R}}^{2} & \geq\left(1-e^{-\gamma_{S^{F R}, k}}\right) \cdot OPT \\
@@ -435,9 +470,10 @@ $\operatorname{det}(A)=\prod_{i=1}^{n+1} \lambda_{i}^{A}$ и $\operatorname{det}
 Теперь сформулируем известные оценки точности метода OMP.
 
 \begin{theorem}[Оценки на множество $S^{OMP}$ \cite{das2011submodular}]
+\label{t2}
 Подмножество $S^{OMP}$, выбранное алгоритмом OMP, имеет следующие оценки аппроксимации коэффициента детерминации:
 \begin{equation}\begin{aligned}
-R_{Z, S^{O M P}}^{2} & \geq\left(1-e^{-\left(\gamma_{S} O u_{, k} \cdot \lambda_{\min }(C, 2 k)\right)}\right) \cdot OPT \\
+R_{Z, S^{OMP}}^{2} & \geq\left(1-e^{-\left(\gamma_{S} O u_{, k} \cdot \lambda_{\min }(C, 2 k)\right)}\right) \cdot OPT \\
 & \geq\left(1-e^{-\lambda_{\min }(C, 2 k)^{2}}\right) \cdot OPT \\
 & \geq\left(1-e^{-\lambda_{\min }(C, k)^{2}}\right) \cdot \Theta\left(\left(\frac{1}{2}\right)^{1 / \lambda_{\min }(C, k)}\right) \cdot OPT
 \end{aligned}\end{equation}
@@ -446,9 +482,12 @@ R_{Z, S^{O M P}}^{2} & \geq\left(1-e^{-\left(\gamma_{S} O u_{, k} \cdot \lambda_
 
 \subsection{Oblivious Greedy Algorithm}
 \begin{theorem}[Оценка на множество $S^{Oblivious}$ \cite{das2011submodular}]
+\label{t3}
 Пусть подмножество $S^{Oblivious}$ было выбрано в результате работы забывчивого жадного алгоритма. Тогда справедливы следующие оценки аппроксимации коэффициента детерминации:
 \begin{equation}R_{Z, S^{O B L}}^{2} \geq \frac{\gamma_{0, k}}{\lambda_{\max }(C, k)} \cdot O P T \geq \frac{\lambda_{\min }(C, k)}{\lambda_{\max }(C, k)} \cdot O P T\end{equation}
 \end{theorem}
+
+
 \section{Эксперименты}
 \label{S:4}
 
@@ -456,41 +495,88 @@ R_{Z, S^{O M P}}^{2} & \geq\left(1-e^{-\left(\gamma_{S} O u_{, k} \cdot \lambda_
     \begin{minipage}{.49\textwidth}
         \centering
         \includegraphics[width=1.1\linewidth]{img/boston_housing.png}
-        \caption{Сравнение результатов работы алгоритмов на данных Boston Housing}
+        % \caption{Сравнение результатов работы алгоритмов на данных Boston Housing}
     \end{minipage}
     \begin{minipage}{.49\textwidth}
         \centering
         \includegraphics[width=1.1\linewidth]{img/sythetic_data.png}
-        \caption{Сравнение результатов работы алгоритмов на синтетических данных}
+        % \caption{Сравнение результатов работы алгоритмов на синтетических данных}
     \end{minipage}
 \end{figure}
 
-Исследуемые методы были проверены на двух наборах данных: Boston Housing и синтетических данных ($X_i$ сгенерированы из многомерного нормального распределения с матрицей ковариации $C$, близкой к вырожденной, и $Z = \sum\limits_{i = 1}^n \alpha_i X_i + \varepsilon$, где $\varepsilon$ - нормально распределенная случайная величина). Из графиков видно, что наилучший результат показывает метод Прямой Регрессии (Forward Regression), достаточной близкий результат у метода Ортогонального Согласованного Преследования (Orthogonal Matching Pursuit), а Забывчивый жадный алгоритм (Oblivious greedy Algorithm) показывает существенно меньший результат. На реальных данных хуже всего себя показывает $L_1$~-- регуляризация. Важно отметить, что Например, для $k = 5$ и $k = 8$ на данных Boston Housing были достигнуты следующие результаты: 
-\begin{center}
-    \begin{tabular}{ |c|c|c|c|c| } 
+Исследуемые методы были проверены на двух наборах данных: \textit{Boston Housing Dataset} и синтетических данных ($X_i$ сгенерированы из многомерного нормального распределения с матрицей ковариации $C$, близкой к вырожденной, и $Z = \sum\limits_{i = 1}^n \alpha_i X_i + \varepsilon$, где $\varepsilon$ - нормально распределенная случайная величина). \\
+
+Из графиков видно, что наилучший результат аппроксимации показывает метод прямой регрессии. Зависимость $R^2_{S_{FR}, Z}(k)$ наиболее близка к единице среди результатов, полученных остальными методами.\\
+
+На реальных данных хуже всего себя показывает $L_1$~-- регуляризация: \[R^2_{S_{L_1}, Z}(k)<0.61~,~\forall~k\in\{1,\dots,8\}.\]
+
+Самый простой из методов -- забывчивый жадный алгоритм -- логично восстанавливает самую грубую зависимость среди прочих жадных методов. Особенно это характерно на живых данных, так как в данном случае заранее ничего не известно о связи между признаками. \\
+
+Приведем результаты работы для некоторых $k$ на синтетических и реальных данных в следующих таблицах: 
+
+\begin{table}[H]
+    \centering
+     \begin{tabular}{ |c|c|c|c|c|c| } 
         \hline
-          & Forward  & OMP & Oblivious& $L_1$ \\ 
-          &  Regression & & Algorithm & \\ 
+        \multicolumn{6}{|c|}{Таблица значений $R^2$ на синтетических данных}\\
+        \multicolumn{6}{|c|}{для разных алгоритмов при разных k}\\
+        \hline
+          & Forward  &  & Oblivious& & \\ 
+          $k$&  Regression & OMP & Algorithm & $L_1$ & OPT\\
          \hline
-         $k = 5$ & 0.71 & 0.70 & 0.68 & 0.59\\ 
+         2 & 0.45 & 0.44 & 0.42 & 0.40 & 0.47\\ 
          \hline
-         $k = 8$ & 0.73 & 0.73 & 0.69& 0.61\\ 
+         5 & 0.63 & 0.62 & 0.56 & 0.58 & 0.64\\ 
+         \hline
+         10 & 0.71 & 0.71 & 0.65& 0.68 & - \\ 
+         \hline
+         15 & 0.74 & 0.74 & 0.69& 0.72 & -\\ 
          \hline
     \end{tabular}
-\end{center}
+\end{table}
+
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+        \hline
+        \multicolumn{6}{|c|}{Таблица значений $R^2$ на реальных данных}\\
+        \multicolumn{6}{|c|}{для разных алгоритмов при разных k}\\
+        \hline
+          & Forward  &  & Oblivious& & \\ 
+          $k$&  Regression & OMP & Algorithm & $L_1$ & OPT\\
+         \hline
+         2 & 0.64 & 0.64 & 0.64 & 0.54 & 0.64\\ 
+         \hline
+         5 & 0.71 & 0.70 & 0.68 & 0.59 & 0.71\\ 
+         \hline
+         8 & 0.73 & 0.73 & 0.69& 0.61 & 0.73\\ 
+         \hline
+    \end{tabular}
+\end{table}
 
 
 \section{Выводы}
 \begin{itemize}
-    \item Наилучший результат на двух наборах данных показывает метод Прямой Регрессии (Forward Regression).
-    \item Забывчивый жадный Алгоритм (Oblivious greedy Algorithm) и $L_1$-регуляризация показывают результаты, существенно уступающие Прямой Регрессии (Forward Regression) и  Ортогональному Согласованному Преследованию (Orthogonal Matching Pursuit).
+    \item Методу прямой регрессии соответствует наибольшее приближение $R^2$ (причем на обоих видах данных), то есть этот метод восстанавливает наиболее сильную зависимость $Z'=Z'(X_{i_1}, \dots, X_{i_k}),~i_k \in S$.
+    \item На реальных данных при $k\geqslant 7$ результат $R^2_{FR}(k) > 0.7$, что позволяет считать, что результат аппроксимации достаточно качественный. 
+    \item При работе на данных \textit{Boston Housing} $L_1$-регуляризация (Lasso) демонстрирует наименьший результат $R^2(k)$ среди всех методов. 
+    
+    % Возможной причиной может быть то, что внутри этого метода решалась задача оптимизации среднеквадратической ошибки (MSE), тогда как в других алгоритмах максимизировался коэффициент $R_{S, Z}^2$.
+    
+    Возможной причиной может быть то, что была реализована модификация алгоритма $L_1$-регуляризации, которая позволяет задать конкретное количество $k$ искомых признаков, хотя исходный алгоритм для этого не предназначен. Данный алгоритм увеличивает $\lambda$, пока нужное количество компонент вектора весов $w$ не станут достаточно малы, что может привести к слишком большому значению $\lambda$ и понижению точности минимизации целевой функции.
+    
+    \item Забывчивый жадный алгоритм (Oblivious greedy Algorithm) и $L_1$-регуляризация показывают результаты, существенно уступающие Прямой регрессии (Forward Regression) и  Ортогональному согласованному преследованию (Orthogonal Matching Pursuit). 
+    \item Были экспериментально подтверждены теоретические гарантии аппроксимации (см. теоремы \hyperref[t1]{\textit{1}}, \hyperref[t2]{\textit{2}},
+    \hyperref[t3]{\textit{3}}).
 \end{itemize}
 
 \section{Заключение}
 
-В данной статье были рассмотрены такие задачи, как Выбор оптимального подмножества и Выбор оптимального словаря. Эти задачи были рассмотрены в контексте отбора признаков. Для их решения были подобраны жадные алгоритмы: Прямая Регрессия (Forward Regression), Ортогональное Согласованное Преследование (Orthogonal Matching Pursuit), Забывчивый жадный алгоритм (Oblivious greedy Algorithm). Так же была рассмотрена $L_1$-регуляризация (Lasso Regression). Наилучший коэффициент детерминации лучший результат показали Прямая Регрессия и Ортогональное Согласованное Преследование на реальных и синтетических данных. Соответственно худший результат показали Забывчивый жадный алгоритм и $L_1$-регуляризация. Для данных жадных алгоритмов были подтверждены теоретические оценки на точность аппроксимации оптимального $OPT$. 
+В данной статье были рассмотрены такие задачи, как \textit{Выбор оптимального подмножества} и \textit{Выбор оптимального словаря}. Для их решения были рассмотрены следующие жадные алгоритмы: Прямая регрессия (Forward Regression), Ортогональное согласованное преследование (Orthogonal Matching Pursuit), Забывчивый жадный алгоритм (Oblivious greedy Algorithm). Так же была рассмотрена $L_1$-регуляризация (Lasso Regression). С использованием субмодулярного анализа и спектральных свойств матрицы ковариаций были получены гарантии аппроксимации коэффициента детерминации для выбранного оптимального подмножества. Полученные оценки помогают понять, почему жадные алгоритмы решают задачу выбора подмножества эффективно даже с наличием коррелированных данных и подтверждаются экспериментально на реальных и синтетических данных. 
+
 \section{Направление исследования в будущем}
-В дальнейших исследованиях планируется исследовать возможность решения схожей задачи с помощью эвристик, например Прямо-обратная Регрессия (Forward-backward Regression), Поиск в Ширину (Breadth-first Search), Поиск в Глубину (Depth-first Search), и Генетические алгоритмы (Genetic Algorithm)~\cite{vorontcov2007lectures}.
+В дальнейших исследованиях планируется исследовать возможность решения схожей задачи с помощью эвристик, например Прямо-обратная регрессия (Forward-backward Regression), Поиск в ширину (Breadth-first Search), Поиск в глубину (Depth-first Search), и Генетические алгоритмы (Genetic Algorithm)~\cite{vorontcov2007lectures}. Также необходимо протестировать работу методов на других метриках: в первую очередь с помощью логарифмической функции правдоподобия, AUC ROC \cite{montgomery2012introduction}. 
 
 
 
