--- a/sample.bib
+++ b/sample.bib
@@ -227,3 +227,10 @@
   journal={Режим доступа: http://www. Machi neLearning. ru},
   year={2007}
 }
+@book{montgomery2012introduction,
+  title={Introduction to linear regression analysis},
+  author={Montgomery, Douglas C and Peck, Elizabeth A and Vining, G Geoffrey},
+  volume={821},
+  year={2012},
+  publisher={John Wiley \& Sons}
+}
